--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -39,62 +39,14 @@
 				document.body.appendChild( container );
 
 				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 200 );
-				camera.position.set( -17.227134137254193,  19.371550123693538,  20.419816238700083);
+				camera.position.set( 0,  1,  3);
 				window.camera=camera
 
 				scene = new THREE.Scene();
 
-				new RGBELoader()
-					.setDataType( THREE.UnsignedByteType )
-					.setPath( 'textures/equirectangular/' )
-					.load( 'royal_esplanade_1k.hdr', function ( texture ) {
-
-						var envMap = pmremGenerator.fromEquirectangular( texture ).texture;
-
-						scene.background = envMap;
-						scene.environment = envMap;
-
-						texture.dispose();
-						pmremGenerator.dispose();
-
-						render();
-
-						// model
-
-						// use of RoughnessMipmapper is optional
-						var roughnessMipmapper = new RoughnessMipmapper( renderer );
-
-						var loader = new GLTFLoader().setPath( '/lib/3d-game-shaders-for-beginners_github_gonnavis/demonstration/eggs/mill-scene/' );
-						loader.load( 'all.glb', function ( gltf ) {
-							window.gltf=gltf
-
-							gltf.scene.traverse( function ( child ) {
-
-								if ( child.isMesh ) {
-
-									// TOFIX RoughnessMipmapper seems to be broken with WebGL 2.0
-									// roughnessMipmapper.generateMipmaps( child.material );
-
-								}
-
-							} );
-
-							scene.add( gltf.scene );
-
-							roughnessMipmapper.dispose();
-
-							render();
-
-						} );
-
-					} );
-
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.toneMapping = THREE.ACESFilmicToneMapping;
-				renderer.toneMappingExposure = 1;
-				renderer.outputEncoding = THREE.sRGBEncoding;
 				container.appendChild( renderer.domElement );
 
 				var pmremGenerator = new THREE.PMREMGenerator( renderer );
@@ -102,12 +54,21 @@
 
 				controls = new OrbitControls( camera, renderer.domElement );
 				controls.addEventListener( 'change', render ); // use if there is no animation loop
-				// controls.minDistance = 2;
-				// controls.maxDistance = 10;
-				// controls.target.set( 0, 0, - 0.2 );
 				controls.update();
 
 				window.addEventListener( 'resize', onWindowResize, false );
+
+				{
+					let name='main'
+					let geo=new THREE.BoxBufferGeometry(1,1,1)
+					let mtl=new THREE.MeshBasicMaterial({
+						color:'red',
+					})
+					let mesh=new THREE.Mesh(geo,mtl)
+					window[name]=mesh
+					scene.add(mesh)
+					BufferGeometryUtils.computeTangents(geo)
+				}
 
 			}
 
