--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -1,97 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>three.js webgl - glTF loader</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
 
-	<body>
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - GLTFLoader<br />
-			Battle Damaged Sci-fi Helmet by
-			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
-			<a href="https://hdrihaven.com/hdri/?h=royal_esplanade" target="_blank" rel="noopener">Royal Esplanade</a> by <a href="https://hdrihaven.com/" target="_blank" rel="noopener">HDRI Haven</a>
-		</div>
+<head>
+	<title>Panda3D</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link type="text/css" rel="stylesheet" href="main.css">
+</head>
 
-		<script type="module">
+<body>
 
-			import * as THREE from '../build/three.module.js';
-			window.THREE=THREE
+	<script type="module">
 
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
-			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
-			import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
-			import { BufferGeometryUtils } from './jsm/utils/BufferGeometryUtils.js';
-			window.BufferGeometryUtils=BufferGeometryUtils
+		import * as THREE from '../build/three.module.js';
 
-			var container, controls;
-			var camera, scene, renderer;
+		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 
-			init();
+		var container, controls;
+		var camera, scene, renderer;
+
+		(async () => {
+			await init();
+			render();
+		})()
+
+		async function init() {
+
+			container = document.createElement('div');
+			document.body.appendChild(container);
+
+			camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.25, 200);
+			camera.position.set(0, 1, 3);
+			window.camera = camera
+
+			scene = new THREE.Scene();
+
+			renderer = new THREE.WebGLRenderer({ antialias: true });
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			container.appendChild(renderer.domElement);
+
+			controls = new OrbitControls(camera, renderer.domElement);
+			controls.addEventListener('change', render); // use if there is no animation loop
+			controls.update();
+
+			window.addEventListener('resize', onWindowResize, false);
+
+			{
+				let geo = new THREE.BoxBufferGeometry(1, 1, 1)
+				// let mtl = new THREE.MeshStandardMaterial({
+				// 	color: 'red',
+				// })
+				let vertexShader=await(await fetch('/lib/3d-game-shaders-for-beginners_github/demonstration/shaders/fragment/base.vert')).text()
+				let fragmentShader=await(await fetch('/lib/3d-game-shaders-for-beginners_github/demonstration/shaders/fragment/base.frag')).text()
+				vertexShader=vertexShader.replace('#version 150','')
+				fragmentShader=fragmentShader.replace('#version 150','')
+				let mtl = new THREE.RawShaderMaterial({
+					vertexShader,
+					fragmentShader,
+				})
+				let mt
+				let mesh = new THREE.Mesh(geo, mtl)
+				scene.add(mesh)
+			}
+			{
+				const light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1);
+				scene.add(light);
+			}
+			{
+				const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+				scene.add(directionalLight);
+				scene.add(directionalLight.target);
+				directionalLight.target.position.set(-.5, 0, -1)
+			}
+
+		}
+
+		function onWindowResize() {
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize(window.innerWidth, window.innerHeight);
+
 			render();
 
-			function init() {
+		}
 
-				container = document.createElement( 'div' );
-				document.body.appendChild( container );
+		//
 
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 200 );
-				camera.position.set( 0,  1,  3);
-				window.camera=camera
+		function render() {
 
-				scene = new THREE.Scene();
+			renderer.render(scene, camera);
 
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				container.appendChild( renderer.domElement );
+		}
 
-				var pmremGenerator = new THREE.PMREMGenerator( renderer );
-				pmremGenerator.compileEquirectangularShader();
+	</script>
 
-				controls = new OrbitControls( camera, renderer.domElement );
-				controls.addEventListener( 'change', render ); // use if there is no animation loop
-				controls.update();
+</body>
 
-				window.addEventListener( 'resize', onWindowResize, false );
-
-				{
-					let name='main'
-					let geo=new THREE.BoxBufferGeometry(1,1,1)
-					let mtl=new THREE.MeshBasicMaterial({
-						color:'red',
-					})
-					let mesh=new THREE.Mesh(geo,mtl)
-					window[name]=mesh
-					scene.add(mesh)
-					BufferGeometryUtils.computeTangents(geo)
-				}
-
-			}
-
-			function onWindowResize() {
-
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-
-				renderer.setSize( window.innerWidth, window.innerHeight );
-
-				render();
-
-			}
-
-			//
-
-			function render() {
-
-				renderer.render( scene, camera );
-
-			}
-
-		</script>
-
-	</body>
 </html>
