--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -47,7 +47,9 @@
 			window.addEventListener('resize', onWindowResize, false);
 
 			{
-				let geo = new THREE.BoxBufferGeometry(1, 1, 1)
+				// let geo = new THREE.BoxBufferGeometry(1, 1, 1)
+				let geo = new THREE.PlaneBufferGeometry(1, 1)
+				window.geo=geo
 				// let mtl = new THREE.MeshStandardMaterial({
 				// 	color: 'red',
 				// })
