--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -18,8 +18,9 @@
 
 		var container, controls;
 		var camera, scene, renderer;
+		const frustumSize = 3
 
-		(async () => {
+		;(async () => {
 			await init();
 			render();
 		})()
@@ -29,8 +30,13 @@
 			container = document.createElement('div');
 			document.body.appendChild(container);
 
-			camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.25, 200);
-			camera.position.set(0, 1, 3);
+			// camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.25, 200);
+			// camera.position.set(0, 1, 3);
+
+			const aspect = window.innerWidth / window.innerHeight;
+			camera = new THREE.OrthographicCamera( frustumSize * aspect / - 2, frustumSize * aspect / 2, frustumSize / 2, frustumSize / - 2, 1, 10 );
+			camera.position.set(0, 0, 5);
+
 			window.camera = camera
 
 			scene = new THREE.Scene();
@@ -106,6 +112,7 @@
 				}
 
 				window.uniforms = {
+					trans_world_to_view:{value:null},
 					p3d_Texture0: { value: textureABC },
 					pi: { value: new THREE.Vector2(0, Math.PI) },
 					gamma: { value: new THREE.Vector2(1, 0) },
@@ -149,11 +156,18 @@
 
 		function onWindowResize() {
 
-			camera.aspect = window.innerWidth / window.innerHeight;
+			// camera.aspect = window.innerWidth / window.innerHeight;
+			// camera.updateProjectionMatrix();
+			// renderer.setSize(window.innerWidth, window.innerHeight);
+			// render();
+
+			const aspect = window.innerWidth / window.innerHeight;
+			camera.left = - frustumSize * aspect / 2;
+			camera.right = frustumSize * aspect / 2;
+			camera.top = frustumSize / 2;
+			camera.bottom = - frustumSize / 2;
 			camera.updateProjectionMatrix();
-
-			renderer.setSize(window.innerWidth, window.innerHeight);
-
+			renderer.setSize( window.innerWidth, window.innerHeight );
 			render();
 
 		}
@@ -165,6 +179,7 @@
 			uniforms.p3d_ProjectionMatrix.value = camera.projectionMatrix
 			uniforms.p3d_ModelViewMatrix.value = mesh.modelViewMatrix
 			uniforms.p3d_Texture0.value = textureABC
+			uniforms.trans_world_to_view.value = camera.matrixWorldInverse
 
 			// uniforms.p3d_Material.value.ambient = new THREE.Vector4(0, 0, .5, 1)
 			// uniforms.p3d_Material.value.diffuse = new THREE.Vector4(1, 0, 0, 1)
