--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -196,6 +196,7 @@
 			camera.updateMatrixWorld()
 			uniforms.trans_world_to_view.value = camera.matrixWorldInverse
 			uniforms.trans_view_to_world.value = camera.matrixWorld
+			uniforms.p3d_NormalMatrix.value = new THREE.Matrix3().setFromMatrix4(new THREE.Matrix4().extractRotation(camera.matrixWorldInverse)) 
 
 			// uniforms.p3d_Material.value.ambient = new THREE.Vector4(0, 0, .5, 1)
 			// uniforms.p3d_Material.value.diffuse = new THREE.Vector4(1, 0, 0, 1)
