--- a/examples/lettier_simple.html
+++ b/examples/lettier_simple.html
@@ -21,7 +21,7 @@
 
 		var container, controls;
 		var camera, scene, renderer;
-		const frustumSize = 3
+		const frustumSize = 2
 
 		;(async () => {
 			await init();
@@ -37,8 +37,8 @@
 			// camera.position.set(0, 1, 3);
 
 			const aspect = window.innerWidth / window.innerHeight;
-			camera = new THREE.OrthographicCamera( frustumSize * aspect / - 2, frustumSize * aspect / 2, frustumSize / 2, frustumSize / - 2, 1, 10 );
-			camera.position.set(0, 0, 5);
+			camera = new THREE.OrthographicCamera( frustumSize * aspect / - 2, frustumSize * aspect / 2, frustumSize / 2, frustumSize / - 2, .001, 100 );
+			camera.position.set(0, 0, 1);
 			// camera.position.set(-5, 0, 0);
 
 			window.camera = camera
@@ -99,17 +99,17 @@
 				// })
 				let vertexShader = await (await fetch('./base.vert')).text()
 				let fragmentShader = await (await fetch('./base.frag')).text()
-				window.textureABC = new THREE.TextureLoader().load("/lib/three.js_github_gonnavis/examples/models/lwo/Images/material-Phong-metal/167_COLOR.JPG", render);
-				textureABC.wrapS = THREE.RepeatWrapping;
-				textureABC.wrapT = THREE.RepeatWrapping;
-				textureABC.repeat.set(4, 4);
 
-				let o_p3d_LightSource = {
+				window.p3d_Texture0 = new THREE.TextureLoader().load("/lib/three.js_github_gonnavis/examples/models/lwo/Images/material-Phong-metal/167_COLOR.JPG", render);
+				window.p3d_Texture1 = new THREE.TextureLoader().load("/lib/3d-game-shaders-for-beginners_github/demonstration/eggs/mill-scene/tex/normal.png", render);
+				window.p3d_Texture2 = new THREE.TextureLoader().load("/lib/3d-game-shaders-for-beginners_github/demonstration/eggs/mill-scene/tex/no-specular.png", render);
+
+				window.o_p3d_LightSource = {
 					color: new THREE.Vector4(1,1,1,1),
 					ambient: new THREE.Vector4(1,1,1,1),
 					diffuse: new THREE.Vector4(1,1,1,1),
 					specular: new THREE.Vector4(1,1,1,1),
-					position: new THREE.Vector4(1,1,1),
+					position: new THREE.Vector4(),//Panda3D sets p3d_LightSource[i].position.w to zero if this is a directional light.
 					spotDirection: new THREE.Vector3(-1,-1,-1),
 					spotExponent: 0,
 					spotCutoff: 10,
@@ -118,7 +118,7 @@
 					linearAttenuation: 0,
 					quadraticAttenuation: 1,
 					attenuation: new THREE.Vector3(1,1,1,1),///todo not need
-					shadowMap: textureABC,
+					shadowMap: p3d_Texture0,
 					shadowViewMatrix: new THREE.Matrix4(),
 				}
 
@@ -126,7 +126,9 @@
 					trans_world_to_view:{value:null},
 					trans_view_to_world:{value:null},
 					p3d_NormalMatrix:{value:new THREE.Matrix3()},
-					p3d_Texture0: { value: textureABC },
+					p3d_Texture0: { value: p3d_Texture0 },
+					p3d_Texture1: { value: p3d_Texture1 },
+					p3d_Texture2: { value: p3d_Texture2 },
 					pi: { value: new THREE.Vector2(0, Math.PI) },
 					gamma: { value: new THREE.Vector2(1, 0) },
 					p3d_Material: {
@@ -138,11 +140,12 @@
 							shininess: 1,
 						}
 					},
-					p3d_ProjectionMatrix: { value: null },
-					p3d_ModelViewMatrix: { value: null },
+					p3d_ProjectionMatrix: { value: new THREE.Matrix4() },
+					p3d_ModelViewMatrix: { value: new THREE.Matrix4() },
 					isParticle: { value: new THREE.Vector2() },
 					p3d_LightSource: {
-						value: [o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource],
+						value: [o_p3d_LightSource],
+						// value: [o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource],
 					},
 				}
 				let mtl = new THREE.RawShaderMaterial({
@@ -189,14 +192,17 @@
 
 		function render() {
 			console.log('render')
+			camera.updateMatrixWorld()
+			camera.updateProjectionMatrix()
 			uniforms.p3d_ProjectionMatrix.value = camera.projectionMatrix
 			uniforms.p3d_ModelViewMatrix.value = mesh.modelViewMatrix
-			uniforms.p3d_Texture0.value = textureABC
+			// uniforms.p3d_ModelViewMatrix.value.getInverse(camera.modelViewMatrix)
 
-			camera.updateMatrixWorld()
 			uniforms.trans_world_to_view.value = camera.matrixWorldInverse
 			uniforms.trans_view_to_world.value = camera.matrixWorld
 			uniforms.p3d_NormalMatrix.value = new THREE.Matrix3().setFromMatrix4(new THREE.Matrix4().extractRotation(camera.matrixWorldInverse)) 
+
+			o_p3d_LightSource.position.copy(new THREE.Vector4(.2,.4,.6,0).applyMatrix4(mesh.modelViewMatrix))
 
 			// uniforms.p3d_Material.value.ambient = new THREE.Vector4(0, 0, .5, 1)
 			// uniforms.p3d_Material.value.diffuse = new THREE.Vector4(1, 0, 0, 1)
