lettier mill-scene preliminary ok

--- a/examples/lettier_2.html
+++ b/examples/lettier_2.html
@@ -1,136 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>three.js webgl - glTF loader</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
 
-	<body>
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - GLTFLoader<br />
-			Battle Damaged Sci-fi Helmet by
-			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
-			<a href="https://hdrihaven.com/hdri/?h=royal_esplanade" target="_blank" rel="noopener">Royal Esplanade</a> by <a href="https://hdrihaven.com/" target="_blank" rel="noopener">HDRI Haven</a>
-		</div>
+<head>
+	<title>three.js webgl - glTF loader</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	<link type="text/css" rel="stylesheet" href="main.css">
+</head>
 
-		<script type="module">
+<body>
+	<div id="info">
+		<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - GLTFLoader<br />
+		Battle Damaged Sci-fi Helmet by
+		<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
+		<a href="https://hdrihaven.com/hdri/?h=royal_esplanade" target="_blank" rel="noopener">Royal Esplanade</a> by <a
+			href="https://hdrihaven.com/" target="_blank" rel="noopener">HDRI Haven</a>
+	</div>
 
-			import * as THREE from '../build/three.module.js';
-			window.THREE=THREE
+	<script>window.THREE = true</script>
+	<script src='/lib/vs_util/vs_util.js'></script>
+	<script type="module">
 
-			import { OrbitControls } from './jsm/controls/OrbitControls.js';
-			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
-			import { RGBELoader } from './jsm/loaders/RGBELoader.js';
-			import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
-			import { BufferGeometryUtils } from './jsm/utils/BufferGeometryUtils.js';
-			window.BufferGeometryUtils=BufferGeometryUtils
+		import * as THREE from '../build/three.module.js';
+		window.THREE = THREE
 
-			var container, controls;
-			var camera, scene, renderer;
+		import { OrbitControls } from './jsm/controls/OrbitControls.js';
+		import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
+		import { RGBELoader } from './jsm/loaders/RGBELoader.js';
+		import { RoughnessMipmapper } from './jsm/utils/RoughnessMipmapper.js';
+		import { BufferGeometryUtils } from './jsm/utils/BufferGeometryUtils.js';
+		window.BufferGeometryUtils = BufferGeometryUtils
 
-			init();
-			render();
+		var container, controls;
+		var camera, scene, renderer;
+		const frustumSize = 30
 
-			function init() {
+			; (async () => {
+				await init();
+				render();
+			})()
 
-				container = document.createElement( 'div' );
-				document.body.appendChild( container );
+		async function init() {
 
-				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 200 );
-				camera.position.set( -17.227134137254193,  19.371550123693538,  20.419816238700083);
-				window.camera=camera
+			container = document.createElement('div');
+			document.body.appendChild(container);
 
-				scene = new THREE.Scene();
+			// camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.25, 200);
+			// camera.position.set(-17.227134137254193, 19.371550123693538, 20.419816238700083);
 
-				new RGBELoader()
-					.setDataType( THREE.UnsignedByteType )
-					.setPath( 'textures/equirectangular/' )
-					.load( 'royal_esplanade_1k.hdr', function ( texture ) {
+			const aspect = window.innerWidth / window.innerHeight;
+			camera = new THREE.OrthographicCamera(frustumSize * aspect / - 2, frustumSize * aspect / 2, frustumSize / 2, frustumSize / - 2, .001, 100);
+			camera.position.set(20, 20, 20);
 
-						var envMap = pmremGenerator.fromEquirectangular( texture ).texture;
+			window.camera = camera
 
-						scene.background = envMap;
-						scene.environment = envMap;
+			scene = new THREE.Scene();
 
-						texture.dispose();
-						pmremGenerator.dispose();
+			{//mtl
+				let vertexShader = await (await fetch('./base.vert')).text()
+				let fragmentShader = await (await fetch('./base.frag')).text()
 
-						render();
+				window.p3d_Texture0 = new THREE.TextureLoader().load("/lib/three.js_github_gonnavis/examples/models/lwo/Images/material-Phong-metal/167_COLOR.JPG", render);
+				window.p3d_Texture1 = new THREE.TextureLoader().load("/lib/3d-game-shaders-for-beginners_github/demonstration/eggs/mill-scene/tex/normal.png", render);
+				window.p3d_Texture2 = new THREE.TextureLoader().load("/lib/3d-game-shaders-for-beginners_github/demonstration/eggs/mill-scene/tex/no-specular.png", render);
 
-						// model
+				window.o_p3d_LightSource = {
+					color: new THREE.Vector4(1, 1, 1, 1),
+					ambient: new THREE.Vector4(1, 1, 1, 1),
+					diffuse: new THREE.Vector4(1, 1, 1, 1),
+					specular: new THREE.Vector4(1, 1, 1, 1),
+					position: new THREE.Vector4(),//Panda3D sets p3d_LightSource[i].position.w to zero if this is a directional light.
+					spotDirection: new THREE.Vector3(-1, -1, -1),
+					spotExponent: 0,
+					spotCutoff: 10,
+					spotCosCutoff: -1,
+					constantAttenuation: 1,
+					linearAttenuation: 0,
+					quadraticAttenuation: 1,
+					attenuation: new THREE.Vector3(1, 1, 1, 1),///todo not need
+					shadowMap: p3d_Texture0,
+					shadowViewMatrix: new THREE.Matrix4(),
+				}
 
-						// use of RoughnessMipmapper is optional
-						var roughnessMipmapper = new RoughnessMipmapper( renderer );
-
-						var loader = new GLTFLoader().setPath( '/lib/3d-game-shaders-for-beginners_github_gonnavis/demonstration/eggs/mill-scene/' );
-						loader.load( 'all.glb', function ( gltf ) {
-							window.gltf=gltf
-
-							gltf.scene.traverse( function ( child ) {
-
-								if ( child.isMesh ) {
-
-									// TOFIX RoughnessMipmapper seems to be broken with WebGL 2.0
-									// roughnessMipmapper.generateMipmaps( child.material );
-
-								}
-
-							} );
-
-							scene.add( gltf.scene );
-
-							roughnessMipmapper.dispose();
-
-							render();
-
-						} );
-
-					} );
-
-				renderer = new THREE.WebGLRenderer( { antialias: true } );
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				renderer.toneMapping = THREE.ACESFilmicToneMapping;
-				renderer.toneMappingExposure = 1;
-				renderer.outputEncoding = THREE.sRGBEncoding;
-				container.appendChild( renderer.domElement );
-
-				var pmremGenerator = new THREE.PMREMGenerator( renderer );
-				pmremGenerator.compileEquirectangularShader();
-
-				controls = new OrbitControls( camera, renderer.domElement );
-				controls.addEventListener( 'change', render ); // use if there is no animation loop
-				// controls.minDistance = 2;
-				// controls.maxDistance = 10;
-				// controls.target.set( 0, 0, - 0.2 );
-				controls.update();
-
-				window.addEventListener( 'resize', onWindowResize, false );
-
+				window.uniforms = {
+					trans_world_to_view: { value: null },
+					trans_view_to_world: { value: null },
+					p3d_NormalMatrix: { value: new THREE.Matrix3() },
+					p3d_Texture0: { value: p3d_Texture0 },
+					p3d_Texture1: { value: p3d_Texture1 },
+					p3d_Texture2: { value: p3d_Texture2 },
+					pi: { value: new THREE.Vector2(0, Math.PI) },
+					gamma: { value: new THREE.Vector2(1, 0) },
+					p3d_Material: {
+						value: {
+							ambient: new THREE.Vector4(1, 1, 1, 1),
+							diffuse: new THREE.Vector4(1, 1, 1, 1),
+							emission: new THREE.Vector4(1, 1, 1, 1),
+							specular: new THREE.Vector3(1, 1, 1),
+							shininess: 1,
+						}
+					},
+					p3d_ProjectionMatrix: { value: new THREE.Matrix4() },
+					p3d_ModelViewMatrix: { value: new THREE.Matrix4() },
+					isParticle: { value: new THREE.Vector2() },
+					p3d_LightSource: {
+						value: [o_p3d_LightSource],
+						// value: [o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource, o_p3d_LightSource],
+					},
+				}
+				window.mtl = new THREE.RawShaderMaterial({
+					uniforms,
+					vertexShader,
+					fragmentShader,
+				})
 			}
 
-			function onWindowResize() {
 
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
+			var loader = new GLTFLoader().setPath('/lib/3d-game-shaders-for-beginners_github_gonnavis/demonstration/eggs/mill-scene/');
+			loader.load('all.glb', function (gltf) {
+				window.gltf = gltf
 
-				renderer.setSize( window.innerWidth, window.innerHeight );
+				gltf.scene.traverse(function (child) {
+
+					if (child.isMesh) {
+						window.mesh = child
+						addGeoAttributes(child.geometry)
+						child.material = mtl
+					}
+
+				});
+
+				scene.add(gltf.scene);
+
 
 				render();
 
+			});
+
+
+			renderer = new THREE.WebGLRenderer({ antialias: true });
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			container.appendChild(renderer.domElement);
+
+			controls = new OrbitControls(camera, renderer.domElement);
+			controls.addEventListener('change', render); // use if there is no animation loop
+			// controls.minDistance = 2;
+			// controls.maxDistance = 10;
+			// controls.target.set( 0, 0, - 0.2 );
+			controls.update();
+
+			window.addEventListener('resize', onWindowResize, false);
+
+		}
+
+		function onWindowResize() {
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize(window.innerWidth, window.innerHeight);
+
+			render();
+
+		}
+
+		function addGeoAttributes(geo) {
+			let itemSize
+
+			itemSize = 4
+			let p3d_Vertexs = []
+			geo.attributes.position.array.forEach((n, i) => {
+				p3d_Vertexs.push(n)
+				if (i % 3 === 2) {
+					p3d_Vertexs.push(1)
+				}
+			})
+			geo.setAttribute('p3d_Vertex', new THREE.BufferAttribute(new Float32Array(p3d_Vertexs), itemSize));
+
+			itemSize = 3
+			let p3d_Normals = []
+			geo.attributes.normal.array.forEach((n, i) => {
+				p3d_Normals.push(n)
+			})
+			geo.setAttribute('p3d_Normal', new THREE.BufferAttribute(new Float32Array(p3d_Normals), itemSize));
+
+			itemSize = 2
+			let p3d_MultiTexCoord1s = []
+			geo.attributes.uv.array.forEach((n, i) => {
+				p3d_MultiTexCoord1s.push(n)
+			})
+			geo.setAttribute('p3d_MultiTexCoord1', new THREE.BufferAttribute(new Float32Array(p3d_MultiTexCoord1s), itemSize));
+
+			itemSize = 4
+			let p3d_Colors = []
+			for (let i = 0, ii = 0; i < geo.attributes.position.count; i++, ii += itemSize) {
+				p3d_Colors.push(1, 1, 1, 1)
 			}
+			geo.setAttribute('p3d_Color', new THREE.BufferAttribute(new Float32Array(p3d_Colors), itemSize));
+		}
 
-			//
+		//
 
-			function render() {
+		function render() {
+			if(!window.mesh) return;
+			console.log('render')
+			camera.updateMatrixWorld()
+			camera.updateProjectionMatrix()
+			uniforms.p3d_ProjectionMatrix.value = camera.projectionMatrix
+			uniforms.p3d_ModelViewMatrix.value = mesh.modelViewMatrix
+			// uniforms.p3d_ModelViewMatrix.value.getInverse(camera.modelViewMatrix)
 
-				renderer.render( scene, camera );
+			uniforms.trans_world_to_view.value = camera.matrixWorldInverse
+			uniforms.trans_view_to_world.value = camera.matrixWorld
+			uniforms.p3d_NormalMatrix.value = new THREE.Matrix3().setFromMatrix4(new THREE.Matrix4().extractRotation(camera.matrixWorldInverse))
 
-			}
+			o_p3d_LightSource.position.copy(new THREE.Vector4(.2, .4, .6, 0).applyMatrix4(mesh.modelViewMatrix))
+			// o_p3d_LightSource.position.copy(new THREE.Vector4(0,0,1,0).applyMatrix4(mesh.modelViewMatrix))
 
-		</script>
+			// uniforms.p3d_Material.value.ambient = new THREE.Vector4(0, 0, .5, 1)
+			// uniforms.p3d_Material.value.diffuse = new THREE.Vector4(1, 0, 0, 1)
+			// uniforms.p3d_Material.value.emission = new THREE.Vector4(.5, .5, .5, 1)
+			// uniforms.p3d_Material.value.specular = new THREE.Vector3(0, 0, 0)
+			// uniforms.p3d_Material.value.shininess = 1
 
-	</body>
+			renderer.render(scene, camera);
+
+		}
+
+	</script>
+
+</body>
+
 </html>
